# 371os

01/: text.txt
01/src/: main.rs
02/: Cargo.toml  text.txt
02/src/: main.rs
11/: Cargo.toml
11/src/: lib.rs
12/src/: main.rs
21/: Cargo.toml
21/src/: main.rs
22/: Cargo.toml
22/src/: lib.rs  main.rs
32/: Cargo.toml
32/src/: main.rs
42/: Cargo.toml
42/.cargo/: config.toml
42/src/: main.rs  vga_buffer.rs
51/src/: main.rs  vga.rs
52/: Cargo.toml  imgconv.py
52/src/: colors.rs  main.rs  vga.rs
60/: Cargo.toml
60/src/: main.rs
62/src/: lib.rs  main.rs  vga.rs
63/: Cargo.toml
63/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga.rs
63/tests/: double.rs  println.rs
64/: Cargo.toml
64/src/: colors.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga.rs
64/tests/: except.rs  stack_overflow.rs
82/: Cargo.toml
82/src/: gdt.rs  interrupts.rs  lib.rs  main.rs
82/tests/: double.rs  println.rs
A1/: Cargo.toml
A1/.cargo/: config.toml
A1/src/: colors.rs  interrupts.rs  lib.rs  main.rs
A2/src/: clock.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga.rs
A3/src/: clock.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga.rs
A3/tests/: println.rs
B1/: Cargo.toml  README.md
B1/src/: interrupts.rs  lib.rs  main.rs
B1/tests/: except.rs  stack_overflow.rs
D1/: Cargo.toml
D1/src/: allocator.rs  colors.rs  lib.rs  main.rs  memory.rs
D1/tests/: stack_overflow.rs
Snake/: Cargo.toml
Snake/.cargo/: config.toml
Snake/src/: allocator.rs  interrupts.rs  lib.rs  main.rs  snake.rs  vga.rs
(+3 files in other folders)
