[package]
name = "binkle_os"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
spin = "0.10.0"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04","-serial","stdio","-display","none"]
test-success-exit-code = 33
test-timeout = 300


[profile.dev]
panic = "abort"
opt-level = 3

[profile.release]
panic = "abort"

[[test]]
name = "stack_overflow"
harness = false

[[bin]]
name = "binkle_os"
test = true
bench = false
